--- a/Исследование данных сервиса “Яндекс.Музыка”/музыка_больших_городов.ipynb
+++ b/Исследование данных сервиса “Яндекс.Музыка”/музыка_больших_городов.ipynb
@@ -54,13 +54,13 @@
         "id": "wjo1GO_tS8I3",
         "outputId": "d7473fb1-c74a-4da9-995a-779c988ecc7b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "AXN7PHPN_Zcs"
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "fFVu7vqh_Zct"
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "oWTVX3gW_Zct",
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "DSf2kIb-_Zct",
@@ -569,9 +569,7 @@
       "source": [
         "***Описание данных.***\n",
         "\n",
-        "В названиях колонок видны три нарушения стиля:\n",
-        "1. Строчные буквы сочетаются с прописными.\n",
-        "2. Встречаются пробелы."
+        "В названиях колонок мы видим, что строчные буквы сочетаются с прописными, а так же видим наличие пробелов."
       ]
     },
     {
@@ -583,7 +581,7 @@
       },
       "source": [
         "## Предобработка данных\n",
-        "Исправим стиль в заголовках столбцов, исключчим пропуски. Затем проверим данные на дубликаты."
+        "Исправим обнаруженные недостатки. Затем проверим данные на дубликаты."
       ]
     },
     {
@@ -602,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "oKOTdF_Q_Zct",
@@ -640,10 +638,6 @@
       "source": [
         "***Приведем названия в соответствие с хорошим стилем:***\n",
         "\n",
-        "* несколько слов в названии запишем в «змеином_регистре»,\n",
-        "* все символы сделаем строчными,\n",
-        "* устраним пробелы.\n",
-        "\n",
         "Для этого переименуем колонки так:\n",
         "* `'  userID'` → `'user_id'`;\n",
         "* `'Track'` → `'track'`;\n",
@@ -653,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "ISlFqs5y_Zct"
@@ -686,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "d4NOAmTW_Zct",
@@ -724,12 +718,12 @@
       "source": [
         "### Пропуски значений\n",
         "\n",
-        "Посчитаем, сколько в таблице пропущенных значений. Для этого достаточно двух методов `pandas`:"
+        "Посчитаем, сколько в таблице пропущенных значений:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "RskX29qr_Zct",
@@ -769,12 +763,9 @@
         "id": "qubhgnlO_Zct"
       },
       "source": [
-        "Не все пропущенные значения влияют на исследование. Так в `track` и `artist` пропуски не важны для нашей работы. Достаточно заменить их явными обозначениями.\n",
+        "Нас интересует активность пользоватей и жанры. Поэтому пропуски в `track` и `artist` для нас не важны и мы заменим их явными обозначениями.\n",
         "\n",
-        "Но пропуски в `genre` могут помешать сравнению музыкальных вкусов в Москве и Санкт-Петербурге. На практике было бы правильно установить причину пропусков и восстановить данные. Но, такой возможности нет в учебном проекте.\n",
-        " Придётся:\n",
-        "* заполнить и эти пропуски явными обозначениями,\n",
-        "* оценить, насколько они повредят расчётам."
+        "Пропуски в `genre` могут помешать сравнению музыкальных вкусов в Москве и Санкт-Петербурге. Поэтому мы так же заменим их явными значениями, и попробуем оценить насколько такое решение будет влиять на наш вывод."
       ]
     },
     {
@@ -788,12 +779,12 @@
         ]
       },
       "source": [
-        "Заменим пропущенные значения в столбцах `track`, `artist` и `genre` на строку `'unknown'`. Для этого создадим список `columns_to_replace`, переберем его элементы циклом `for` и для каждого столбца выполним замену пропущенных значений:"
+        "Произведем замену в столбцах `track`, `artist` и `genre` на строку `'unknown'`. Для этого создадим список `columns_to_replace`, переберем его элементы циклом `for` и для каждого столбца выполним замену пропущенных значений:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "KplB5qWs_Zct"
@@ -821,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "Tq4nYRX4_Zct",
@@ -871,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "36eES_S0_Zct",
@@ -912,7 +903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "exFHq6tt_Zct"
@@ -938,7 +929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "-8PuNWQ0_Zct",
@@ -975,25 +966,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": false,
-        "editable": false,
-        "id": "eSjWwsOh_Zct",
-        "tags": [
-          "start_task"
-        ]
-      },
-      "source": [
-        "Для этого:\n",
-        "* извлечем нужный столбец датафрейма,\n",
-        "* применим к нему метод сортировки,\n",
-        "* для отсортированного столбца вызовем метод, который вернёт уникальные значения из столбца."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "JIUcqzZN_Zct",
@@ -1075,12 +1049,12 @@
         "* *hop*,\n",
         "* *hip-hop*.\n",
         "\n",
-        "Чтобы очистить от них таблицу используем метод `replace()` с двумя аргументами: списком строк-дубликатов (включащий *hip*, *hop* и *hip-hop*) и строкой с правильным значением."
+        "Приведем все к единообразию."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "ErNDkmns_Zct"
@@ -1103,18 +1077,12 @@
         ]
       },
       "source": [
-        "Проверим, что нам удалось заменить неправильные названия:\n",
-        "\n",
-        "*   hip\n",
-        "*   hop\n",
-        "*   hip-hop\n",
-        "\n",
-        "Выведем отсортированный список уникальных значений столбца `genre`:"
+        "Осуществим проверку выполненных действий. Выведем отсортированный список уникальных значений столбца `genre`:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "wvixALnFG15m",
@@ -1199,13 +1167,13 @@
       "source": [
         "**Выводы**\n",
         "\n",
-        "Предобработка обнаружила три проблемы в данных:\n",
+        "В разделе предобработки мы обнаружили три проблемы в данных:\n",
         "\n",
         "- нарушения в стиле заголовков;\n",
         "- пропущенные значения;\n",
         "- дубликаты — явные и неявные.\n",
         "\n",
-        "Мы исправили заголовки, чтобы упростить работу с таблицей. Без дубликатов исследование станет более точным.\n",
+        "Мы исправили заголовки, чтобы упростить работу с таблицей. А так же прешили проблему дубликатов, теперь исследование станет более точным.\n",
         "\n",
         "Пропущенные значения заменили на `'unknown'`. Ещё предстоит увидеть, не повредят ли исследованию пропуски в колонке `genre`.\n",
         "\n",
@@ -1231,7 +1199,7 @@
         "id": "Im936VVi_Zcu"
       },
       "source": [
-        "### Сравнение поведения пользователей двух столиц"
+        "### Сравнение поведения пользователей двух городов"
       ]
     },
     {
@@ -1259,15 +1227,12 @@
         ]
       },
       "source": [
-        "Выполните каждый из расчётов по отдельности.\n",
-        "\n",
-        "Оценим активность пользователей в каждом городе. Сгруппируем данные по городу и посчитаем прослушивания в каждой группе.\n",
-        "\n"
+        "Оценим активность пользователей в каждом городе. Сгруппируем данные по городу и посчитаем прослушивания в каждой группе."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "0_Qs96oh_Zcu",
@@ -1306,7 +1271,7 @@
         ]
       },
       "source": [
-        "В Москве прослушиваний больше, чем в Петербурге. Из этого не следует, что московские пользователи чаще слушают музыку. Просто самих пользователей в Москве больше.\n",
+        "В Москве прослушиваний больше, чем в Петербурге. Это логично, так как самих пользователей в Москве больше.\n",
         "\n",
         "Теперь сгруппируем данные по дню недели и подсчитаем прослушивания в понедельник, среду и пятницу. Имеем ввиду, что в данных есть информация только о прослушиваниях только за эти дни.\n"
       ]
@@ -1345,24 +1310,15 @@
         ]
       },
       "source": [
-        "Мы посмотрели, как работает группировка по городу и по дням недели. Теперь напишем функцию, которая объединит два эти расчёта.\n",
         "\n",
-        "Создадим функцию `number_tracks()`, которая посчитает прослушивания для заданного дня и города. Ей понадобятся два параметра:\n",
+        "Создадим функцию `number_tracks()`, которая посчитает прослушивания для заданного дня и города. Будем использовать два параметра:\n",
         "* день недели,\n",
-        "* название города.\n",
-        "\n",
-        "В функции сохраним в переменную строки исходной таблицы, у которых значение:\n",
-        "  * в колонке `day` равно параметру `day`,\n",
-        "  * в колонке `city` равно параметру `city`.\n",
-        "\n",
-        "Для этого применим последовательную фильтрацию с логической индексацией.\n",
-        "\n",
-        "Затем посчитаем значения в столбце `user_id` получившейся таблицы. Результат сохраним в новую переменную. Вернем эту переменную из функции."
+        "* название города."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "Nz3GdQB1_Zcu"
@@ -1404,7 +1360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "rJcRATNQ_Zcu",
@@ -1429,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "hq_ncZ5T_Zcu",
@@ -1454,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "_NTy2VPU_Zcu",
@@ -1479,7 +1435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "j2y3TAwo_Zcu",
@@ -1504,7 +1460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "vYDw5u_K_Zcu",
@@ -1529,7 +1485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "8_yzFtW3_Zcu",
@@ -1563,14 +1519,14 @@
         ]
       },
       "source": [
-        "Создадим c помощью конструктора `pd.DataFrame` таблицу, где\n",
+        "Сведем всю информацию с помощью `pd.DataFrame` в одну таблицу, где\n",
         "* названия колонок — `['city', 'monday', 'wednesday', 'friday']`;\n",
         "* данные — результаты, которые мы получили с помощью `number_tracks`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "APAcLpOr_Zcu",
@@ -1608,12 +1564,13 @@
       "source": [
         "**Выводы**\n",
         "\n",
-        "Данные показывают разницу поведения пользователей:\n",
+        "Информация указывает на различия в поведении пользователей:\n",
         "\n",
-        "- В Москве пик прослушиваний приходится на понедельник и пятницу, а в среду заметен спад.\n",
-        "- В Петербурге, наоборот, больше слушают музыку по средам. Активность в понедельник и пятницу здесь почти в равной мере уступает среде.\n",
+        "- В Москве наивысшая активность прослушиваний отмечается в понедельник и пятницу, тогда как в среду наблюдается уменьшение интереса.\n",
         "\n",
-        "Значит, данные говорят в пользу первой гипотезы."
+        "- В Санкт-Петербурге, наоборот, больше всего музыку слушают по средам. В понедельник и пятницу активность здесь почти равномерно распределена и в целом уступает средней неделе.\n",
+        "\n",
+        "Таким образом, полученные данные подтверждают первую гипотезу."
       ]
     },
     {
@@ -1656,7 +1613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "qeaFfM_P_Zcu"
@@ -1669,7 +1626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "ORaVRKto_Zcu"
@@ -1690,18 +1647,12 @@
         ]
       },
       "source": [
-        "Создадим функцию `genre_weekday()` с четырьмя параметрами:\n",
-        "* таблица (датафрейм) с данными,\n",
-        "* день недели,\n",
-        "* начальная временная метка в формате 'hh:mm',\n",
-        "* последняя временная метка в формате 'hh:mm'.\n",
-        "\n",
-        "Функция вернет нам информацию о топ-10 жанров тех треков, которые прослушивали в указанный день, в промежутке между двумя отметками времени."
+        "Создадим функцию `genre_weekday()` которая вернет нам информацию о топ-10 жанров тех треков, которые прослушивали в указанный день, в промежутке между двумя отметками времени."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "laJT9BYl_Zcu"
@@ -1758,7 +1709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "yz7itPUQ_Zcu",
@@ -1796,7 +1747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "kwUcHPdy_Zcu",
@@ -1834,7 +1785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "EzXVRE1o_Zcu",
@@ -1872,7 +1823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "JZaEKu5v_Zcu",
@@ -1962,7 +1913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "r19lIPke_Zcu"
@@ -1990,7 +1941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "WhCSooF8_Zcv",
@@ -2044,7 +1995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "gluLIpE7_Zcv"
@@ -2072,7 +2023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "uaGJHjVU_Zcv",
