--- a/Исследование надёжности заёмщиков/Исследование_надежности_заемщиков.ipynb
+++ b/Исследование надёжности заёмщиков/Исследование_надежности_заемщиков.ipynb
@@ -7,10 +7,7 @@
         "\n",
         "***Описание проекта***\n",
         "\n",
-        "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок.\n",
-        "Входные данные от банка — статистика о платёжеспособности клиентов.\n",
-        "Результаты исследования будут учтены при построении модели кредитного скоринга — специальной системы, которая оценивает способность\n",
-        "потенциального заёмщика вернуть кредит банку.\n",
+        "Клиентом является кредитный отдел банка, исследование направлено на выяснение влияния семейного положения и количества детей клиента на своевременное погашение кредита. Входные данные предоставлены банком в виде статистики о финансовой способности клиентов. Результаты исследования будут учтены при разработке модели кредитного скоринга. Эта модель представляет собой специальную систему, оценивающую способность потенциального заёмщика возвратить кредит банку.\n",
         "\n",
         "***Описание данных***\n",
         "\n",
@@ -280,7 +277,7 @@
         ]
       },
       "source": [
-        "Начнем с `total_income` — он хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполним пропуски в этом столбце медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` должен быть заполнен медианным доходом среди всех записей с тем же типом."
+        "Начнем с рассмотрения столбца total_income, который содержит информацию о доходах. Тип занятости сильно влияет на сумму дохода, поэтому мы планируем заполнить пропуски в этом столбце медианными значениями для каждого типа из столбца income_type. Например, если у человека указан тип занятости сотрудник, пропущенное значение в столбце total_income будет заполнено медианным доходом среди всех записей с тем же типом занятости."
       ]
     },
     {
@@ -362,7 +359,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Убедимся, что все пропуски заполнены. Выведем количество пропущенных значений для каждого столбца с помощью двух методов."
+        "Убедимся, что все пропуски заполнены. Выведем количество пропущенных значений для каждого столбца."
       ],
       "metadata": {
         "id": "1Fud5SNFa7Pm"
@@ -432,7 +429,7 @@
         ]
       },
       "source": [
-        "В данных мы столкнулись с артефактом - присутствует отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных такая ситуация не редка. Обработаем значения в этом столбце: заменим все отрицательные значения положительными."
+        "В данном случае аномалия это присутствие отрицательного количества дней трудового стажа в столбце `days_employed`. Обработаем значения в этом столбце: заменим все отрицательные значения положительными."
       ]
     },
     {
@@ -537,7 +534,7 @@
         "id": "dbc3168c"
       },
       "source": [
-        "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставьте их как есть."
+        "Аномально большие значения у безработных и пенсионеров оставляем, так как их очень сложно исправить, без доступа к методике сбора и фиксации этих данных."
       ]
     },
     {
@@ -592,7 +589,7 @@
         ]
       },
       "source": [
-        "В столбце `children` есть два аномальных значения. Удалим строки, в которых встречаются такие аномальные значения."
+        "Удалим строки, в столбце `children` где встречаются аномальные значения."
       ]
     },
     {
@@ -673,7 +670,7 @@
         ]
       },
       "source": [
-        "Проведем замену вещественного типа данных в столбце `total_income` на целочисленный с помощью метода `astype()`."
+        "Изменим тип данных."
       ]
     },
     {
@@ -712,7 +709,7 @@
         ]
       },
       "source": [
-        "Обработайтаем неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведем их к нижнему регистру."
+        "Проведем обработку неявных дубликатов в столбце `education`. Приведем к нижнему регистру все значения."
       ]
     },
     {
@@ -739,7 +736,7 @@
         ]
       },
       "source": [
-        "**Задание 15. Выведите на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалите их.**"
+        "Избавимся от дубликатов строк"
       ]
     },
     {
@@ -823,10 +820,7 @@
         "- 30001–50000 — `'D'`;\n",
         "- 50001–200000 — `'C'`;\n",
         "- 200001–1000000 — `'B'`;\n",
-        "- 1000001 и выше — `'A'`.\n",
-        "\n",
-        "\n",
-        "Таким образом, например, кредитополучатель с доходом 25000 будет отнесен к категории `'E'`, а клиент, получающий 235000, — `'B'`. Используем собственную функцию."
+        "- 1000001 и выше — `'A'`.\n"
       ]
     },
     {
@@ -1956,16 +1950,6 @@
         "id": "S9dgTzM5y79Q"
       },
       "id": "S9dgTzM5y79Q"
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bbFpdcg1y3wv"
-      },
-      "id": "bbFpdcg1y3wv",
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
